# rosreestr_loader

./: .flake8  LICENSE  README.md  pyproject.toml
rosreestr_loader/: rosreestr_loader.py  rosreestr_merger.py  utils.py
