[tool.poetry]
name = "rosreestr_loader"
version = "0.1.0"
description = "Script to load addresses data from rosreestr.ru API"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.24.0"
Click = "^7.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
autopep8 = "^2.0.2"
rope = "^1.9.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.7.0"
flake8-deprecated = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
